Add route version
